2.3.12 code dump